# git_stats

./: .gitignore  Makefile  README.rst  git_stats.spec  setup.cfg  setup.py  test-requirements.txt  tox.ini
git_stats/: stats.py
git_stats/tests/: sample_1000_commits  sample_1_commit  sample_commits  test_stats.py
src/: git_stats.py
