[metadata]
name = git_stats
summary = git_stats is a test program
description-file = README.rst
author = Erwan Velu
author-email = erwan@redhat.com
home-page = http://www.redhat.com/
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7

[files]
packages =
    git_stats 
